--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           version: v1.60
           only-new-issues: true
-          working-directory: /lens
+          working-directory: lens
