adding lint for each folder

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -17,7 +17,43 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
-      - name: golangci-lint
+      - name: golangci-lint-authenticator
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          only-new-issues: true
+          working-directory: authenticator
+      - name: golangci-lint-chart-sync
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          only-new-issues: true
+          working-directory: chart-sync
+      - name: golangci-lint-common-lib
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          only-new-issues: true
+          working-directory: common-lib
+      - name: golangci-lint-git-sensor
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          only-new-issues: true
+          working-directory: git-sensor
+      - name: golangci-lint-kubelink
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          only-new-issues: true
+          working-directory: kubelink
+      - name: golangci-lint-kubewatch
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          only-new-issues: true
+          working-directory: kubewatch
+      - name: golangci-lint-lens
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60
