changing the go version

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -20,8 +20,8 @@ jobs:
       - name: golangci-lint-authenticator
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.21
-          install-mode: "goinstall"
+          version: v1.18
+          # install-mode: "goinstall"
           only-new-issues: true
           working-directory: authenticator
       - name: golangci-lint-chart-sync
