--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,7 +21,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.18
-          # install-mode: "goinstall"
+          install-mode: "goinstall"
           only-new-issues: true
           working-directory: authenticator
       - name: golangci-lint-chart-sync
