--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -19,8 +19,10 @@ jobs:
           go-version: stable
       - name: golangci-lint-authenticator
         uses: golangci/golangci-lint-action@v6
+        args: --timeout=30m
         with:
-          version: v1.28
+          version: v1.21
+          install-mode: "none"
           only-new-issues: true
           working-directory: authenticator
       - name: golangci-lint-chart-sync
