--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -23,3 +23,4 @@ jobs:
           version: v1.61
           working-directory: authenticator
           args: --timeout=30m
+          only-new-issues: true
