--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,9 +1,15 @@
 name: golangci-lint
 on:
-  push:
-    branches:
-      - main
-      - '*'
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
+    branches:    
+      - 'main'
+      - 'rc-*'
+      - 'hotfix-*'
+      - 'develop'
 
 permissions:
   contents: read
@@ -31,13 +37,6 @@ jobs:
           args: --timeout=30m
           only-new-issues: "true"
           working-directory: chart-sync
-      # - name: golangci-lint-common-lib
-      #   uses: golangci/golangci-lint-action@v6
-      #   with:
-      #     version: v1.61
-      #     args: --timeout=30m
-      #     only-new-issues: "true"
-      #     working-directory: common-lib
       - name: golangci-lint-git-sensor
         uses: golangci/golangci-lint-action@v6
         with:
