--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -38,6 +38,13 @@ jobs:
           args: --timeout=30m
           only-new-issues: "true"
           working-directory: chart-sync
+      - name: golangci-lint-kubewatch
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.61
+          args: --timeout=30m
+          only-new-issues: "true"
+          working-directory: kubewatch
       - name: golangci-lint-git-sensor
         uses: golangci/golangci-lint-action@v6
         with:
@@ -52,13 +59,6 @@ jobs:
           args: --timeout=30m
           only-new-issues: "true"
           working-directory: kubelink
-      - name: golangci-lint-kubewatch
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          args: --timeout=30m
-          only-new-issues: "true"
-          working-directory: kubewatch
       - name: golangci-lint-lens
         uses: golangci/golangci-lint-action@v6
         with:
@@ -66,3 +66,9 @@ jobs:
           args: --timeout=30m
           only-new-issues: "true"
           working-directory: lens
+      - name: golangci-lint-common-lib
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.61
+          only-new-issues: true
+          working-directory: common-lib
