--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -49,21 +49,21 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.61
-          args: --timeout=30m
+          args: --timeout=30m --tests=false
           only-new-issues: "true"
           working-directory: git-sensor
       - name: golangci-lint-kubelink
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.61
-          args: --timeout=30m
+          args: --timeout=30m --tests=false
           only-new-issues: "true"
           working-directory: kubelink
       - name: golangci-lint-lens
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.61
-          args: --timeout=30m
+          args: --timeout=30m --tests=false
           only-new-issues: "true"
           working-directory: lens
       - name: golangci-lint-common-lib
