--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -32,7 +32,7 @@ jobs:
           version: v1.61
           args: --timeout=30m --tests=false --verbose
           only-new-issues: "true"
-          working-directory: common-lib
+          working-directory: common-lib chart-sync kubewatch git-sensor
       - name: golangci-lint-authenticator
         uses: golangci/golangci-lint-action@v6
         with:
