--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -30,9 +30,9 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.61
-          args: --timeout=30m --tests=false --verbose
+          args: --timeout=30m --tests=false --verbose --allow-parallel-runners
           only-new-issues: "true"
-          working-directory: common-lib chart-sync kubewatch git-sensor
+          working-directory: common-lib 
       - name: golangci-lint-authenticator
         uses: golangci/golangci-lint-action@v6
         with:
