--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -19,6 +19,10 @@ jobs:
   golangci:
     name: lint
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        working-directory: [common-lib, authenticator, chart-sync,kubewatch,git-sensor,kubelink,lens]
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -26,52 +30,11 @@ jobs:
           go-version: stable
       - run: cd common-lib &&  go get oras.land/oras-go/pkg/auth/docker && go mod tidy && go mod download && go mod vendor
         name: installing oras.land package
-      - name: golangci-lint-common-lib
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          args: --timeout=30m --tests=false --verbose --allow-parallel-runners
-          only-new-issues: "true"
-          working-directory: common-lib 
-      - name: golangci-lint-authenticator
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          working-directory: authenticator
-          args: --timeout=30m --tests=false --verbose
-          only-new-issues: "true"
-      - name: golangci-lint-chart-sync
+
+      - name: golangci-lint-${{ matrix.working-directory }}
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.61
           args: --timeout=30m --tests=false --verbose
           only-new-issues: "true"
-          working-directory: chart-sync
-      - name: golangci-lint-kubewatch
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          args: --timeout=30m --verbose
-          only-new-issues: "true"
-          working-directory: kubewatch
-      - name: golangci-lint-git-sensor
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          args: --timeout=30m --tests=false --verbose
-          only-new-issues: "true"
-          working-directory: git-sensor
-      - name: golangci-lint-kubelink
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          args: --timeout=30m --tests=false --verbose
-          only-new-issues: "true"
-          working-directory: kubelink
-      - name: golangci-lint-lens
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
-          args: --timeout=30m --tests=false --verbose
-          only-new-issues: "true"
-          working-directory: lens
+          working-directory: ${{ matrix.working-directory }}
