--- a/ci-runner/Dockerfile-v27
+++ b/ci-runner/Dockerfile-v27
@@ -10,14 +10,14 @@ COPY . .
 # Build the binary
 RUN CGO_ENABLED=0 GOOS=linux go build -buildvcs=false -a -installsuffix cgo -o /go/bin/cirunner
 
-
-FROM docker:20.10.24-dind
+FROM docker:27.3-dind
 # All these steps will be cached
 #RUN apk add --no-cache ca-certificates
-RUN apk update && apk add --no-cache --virtual .build-deps && apk add bash && apk add make && apk add curl && apk add git && apk add zip && apk add jq
+RUN apk update && apk add --no-cache --virtual .build-deps && apk add bash && apk add make && apk add curl && apk add git && apk add zip && apk add jq && apk add --no-cache --virtual openssh
 RUN ln -sf /usr/share/zoneinfo/Etc/UTC /etc/localtime
-RUN apk -Uuv add groff less python3 py3-pip
-RUN pip3 install awscli
+RUN apk -Uuv add groff less python3 py3-pip pipx
+RUN pipx ensurepath
+RUN pipx install awscli
 RUN apk --purge -v del py-pip
 RUN rm /var/cache/apk/*
 COPY --from=docker/compose:2.29.7 /usr/local/bin/docker-compose /usr/bin/docker-compose
