--- a/ci-runner/Dockerfile-v27
+++ b/ci-runner/Dockerfile-v27
@@ -10,10 +10,11 @@ COPY . .
 # Build the binary
 RUN CGO_ENABLED=0 GOOS=linux go build -buildvcs=false -a -installsuffix cgo -o /go/bin/cirunner
 
+
 FROM docker:27.3-dind
 # All these steps will be cached
 #RUN apk add --no-cache ca-certificates
-RUN apk update && apk add --no-cache --virtual .build-deps && apk add bash && apk add make && apk add curl && apk add git && apk add zip && apk add jq && apk add --no-cache --virtual openssh
+RUN apk update && apk add --no-cache --virtual .build-deps && apk add bash && apk add make && apk add curl && apk add git && apk add zip && apk add jq
 RUN ln -sf /usr/share/zoneinfo/Etc/UTC /etc/localtime
 RUN apk -Uuv add groff less python3 py3-pip pipx
 RUN pipx ensurepath
