--- a/git-sensor/Makefile
+++ b/git-sensor/Makefile
@@ -37,5 +37,10 @@ run: build
 #	docker tag orchestrator:${TAG}  ${REGISTRY}/orchestrator:${TAG}
 #	docker push ${REGISTRY}/orchestrator:${TAG}
 
+dep-update-oss:
+	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH) \
+	            -replace=github.com/devtron-labs/git-sensor=github.com/devtron-labs/devtron-services/git-sensor@$(TARGET_BRANCH)
+	go mod tidy
+	go mod vendor
 
 
