--- a/lens/Makefile
+++ b/lens/Makefile
@@ -28,3 +28,10 @@ run: build
 .PHONY: build
 docker-build-image:  build
 	 docker build -t lens:$(TAG) .
+
+
+TARGET_BRANCH?=main
+dep-update-oss:
+	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH)
+	go mod tidy
+	go mod vendor
