--- a/kubelink/Makefile
+++ b/kubelink/Makefile
@@ -28,8 +28,7 @@ run: build
 	./kubelink
 
 dep-update-oss:
-	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH) \
-	            -replace=github.com/devtron-labs/kubelink=github.com/devtron-labs/devtron-services/kubelink@$(TARGET_BRANCH)
+	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH)
 	go mod tidy
 	go mod vendor
 
