--- a/ci-runner/Makefile
+++ b/ci-runner/Makefile
@@ -32,7 +32,6 @@ docker-build-push: docker-build-image
 
 
 dep-update-oss:
-	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH) \
-	            -replace=github.com/devtron-labs/ci-runner=github.com/devtron-labs/devtron-services/ci-runner@$(TARGET_BRANCH)
+	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH)
 	go mod tidy
 	go mod vendor
