--- a/ci-runner/Dockerfile
+++ b/ci-runner/Dockerfile
@@ -20,7 +20,7 @@ RUN apk -Uuv add groff less python3 py3-pip
 RUN pip3 install awscli
 RUN apk --purge -v del py-pip
 RUN rm /var/cache/apk/*
-COPY --from=docker/compose:1.29.2 /usr/local/bin/docker-compose /usr/bin/docker-compose
+COPY --from=docker/compose:latest /usr/local/bin/docker-compose /usr/bin/docker-compose
 
 COPY ./buildpack.json /buildpack.json
 COPY ./git-ask-pass.sh /git-ask-pass.sh
