--- a/image-scanner/Makefile
+++ b/image-scanner/Makefile
@@ -27,3 +27,8 @@ run: build
 .PHONY: build
 docker-build-image:  build
 	 docker build -t image-scanner:$(TAG) .
+
+dep-update-oss:
+	go mod edit -replace=github.com/devtron-labs/common-lib=github.com/devtron-labs/devtron-services/common-lib@$(TARGET_BRANCH)
+	go mod tidy
+	go mod vendor
