--- a/lens/Dockerfile
+++ b/lens/Dockerfile
@@ -1,17 +1,22 @@
 FROM golang:1.21-alpine3.18 AS build-env
 
-RUN apk add --no-cache git gcc musl-dev
-RUN apk add --update make
+RUN apk add --no-cache git gcc musl-dev && \
+	apk add --update make
+
 WORKDIR /go/src/github.com/devtron-labs/lens
+
 ADD . /go/src/github.com/devtron-labs/lens
-RUN go install github.com/google/wire/cmd/wire@latest
-RUN GOOS=linux make
+
+RUN go install github.com/google/wire/cmd/wire@latest && \
+	GOOS=linux make
 
 FROM alpine:3.17
-RUN apk add --no-cache ca-certificates
-COPY --from=build-env  /go/src/github.com/devtron-labs/lens/lens .
-COPY --from=build-env  /go/src/github.com/devtron-labs/lens/scripts/ .
-RUN adduser -D devtron
-RUN chown -R devtron:devtron ./lens
+
+RUN apk add --no-cache ca-certificates && \
+	adduser -D devtron
+
+COPY --chown=devtron:devtron --from=build-env  /go/src/github.com/devtron-labs/lens/lens /go/src/github.com/devtron-labs/lens/scripts/ .
+
 USER devtron
+
 CMD ["./lens"]
