--- a/ci-runner/Dockerfile-v27
+++ b/ci-runner/Dockerfile-v27
@@ -16,7 +16,7 @@ FROM docker:27.3-dind
 # All these steps will be cached
 #RUN apk add --no-cache ca-certificates
 
-RUN apk update && apk add --no-cache --virtual .build-deps && apk add bash && apk add make && apk add curl && apk add git && apk add zip && apk add jq
+RUN apk update && apk add --no-cache --virtual .build-deps && apk add bash && apk add make && apk add curl && apk add git && apk add zip && apk add jq && \
     ln -sf /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
     apk -Uuv add groff less python3 py3-pip pipx && \
     pipx ensurepath && pipx install awscli && \
