--- a/.github/workflows/pr-issue-validator.yaml
+++ b/.github/workflows/pr-issue-validator.yaml
@@ -11,7 +11,7 @@ on:
       - 'main'
       - 'release-**'
       - 'develop'
-      - 'hotfix-v0**'
+      - 'hotfix-**'
   
 jobs:
   validate-PR-issue:
