--- a/image-scanner/Dockerfile
+++ b/image-scanner/Dockerfile
@@ -10,7 +10,7 @@ ADD . /go/src/github.com/devtron-labs/image-scanner
 
 RUN GOOS=linux make
 
-FROM alpine:3.17
+FROM alpine:3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
 
 COPY --from=aquasec/trivy:0.46.1 /usr/local/bin/trivy /usr/local/bin/trivy
 
