--- a/lens/Dockerfile
+++ b/lens/Dockerfile
@@ -10,7 +10,7 @@ ADD . /go/src/github.com/devtron-labs/lens
 RUN go install github.com/google/wire/cmd/wire@latest && \
 	GOOS=linux make
 
-FROM alpine:3.17
+FROM alpine:3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
 
 RUN apk add --no-cache ca-certificates && \
 	adduser -D devtron
