--- a/git-sensor/Dockerfile
+++ b/git-sensor/Dockerfile
@@ -20,7 +20,7 @@ RUN chmod +x /git-ask-pass.sh && \
 	apk add openssh --no-cache && \
 	adduser -D devtron
 
-COPY --chown=devtron:devtron --from=build-env  /go/src/github.com/devtron-labs/git-sensor/scripts/ /go/src/github.com/devtron-labs/git-sensor/git-sensor .
+COPY --chown=devtron:devtron --from=build-env  /go/src/github.com/devtron-labs/git-sensor/scripts/ /go/src/github.com/devtron-labs/git-sensor/git-sensor ./
 
 USER devtron
 
