--- a/kubewatch/Dockerfile
+++ b/kubewatch/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /go/src/github.com/devtron-labs/kubewatch
 ADD . /go/src/github.com/devtron-labs/kubewatch
 RUN GOOS=linux make
 
-FROM alpine:3.19
+FROM alpine:3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
 
 RUN apk add --update ca-certificates && \
     adduser -D devtron
