--- a/lens/Dockerfile
+++ b/lens/Dockerfile
@@ -13,7 +13,7 @@ RUN go install github.com/google/wire/cmd/wire@latest && \
 FROM alpine:3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
 
 RUN apk add --no-cache ca-certificates && \
-	adduser -D devtron
+	adduser -u 4002 -g 4002 -D devtron
 
 COPY --chown=devtron:devtron --from=build-env  /go/src/github.com/devtron-labs/lens/lens /go/src/github.com/devtron-labs/lens/scripts/ .
 
