--- a/kubewatch/Dockerfile
+++ b/kubewatch/Dockerfile
@@ -11,7 +11,7 @@ RUN GOOS=linux make
 FROM alpine:3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
 
 RUN apk add --update ca-certificates && \
-    adduser -D devtron
+    adduser -u 4002 -g 4002 -D devtron
 
 COPY --chown=devtron:devtron --from=build-env  /go/src/github.com/devtron-labs/kubewatch/kubewatch .
 
